--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,26 @@
+:root
+{
+  --primaryColor: #8ddad5;
+  --pads1:#7fc4c0;
+  --pads2:#97e9e4;
+  --padsGradient1:#82c9c4;
+  --padsGradient2:#98ebe6;
+
+}
+
+[data-theme="song2"]
+{
+  --primaryColor: #04b83f;
+  --pads1:#04a639;
+  --pads2:#04c543;
+  --padsGradient1:#039c36;
+  --padsGradient2:#05d448;
+}
+
+
 body{
   width: 100%;
-  background:#8ddad5;
+  background: var(--primaryColor);
   background-size:cover;
   height:100vh;
   margin:0px;
@@ -22,6 +42,7 @@ body{
 {
     letter-spacing: 15px;
 }
+
 .words{
   height:200px;
   margin-top: 50px;
@@ -54,15 +75,18 @@ body{
   display: flex;
   height: 110px;
 }
+
 .lign2{
   display: flex;
   height: 110px;
 }
+
 .lign3{
   display: flex;
   height: 100px;
   justify-content: center;
 }
+
 .box{
   display:flex;
   flex-direction: column;
@@ -73,25 +97,35 @@ body{
   width:90px;
   height:80px;
   border-radius: 30px;
-  background: linear-gradient(145deg, #7fc4c0, #97e9e4);
-  box-shadow:  9px 9px 13px #82c9c4,-9px -9px 13px #98ebe6;
+  background: linear-gradient(145deg,var(--pads1), var(--pads2));
+  box-shadow:  9px 9px 13px var(--padsGradient1),-9px -9px 13px var(--padsGradient2);
   transition: all 0.07s;  
 
 }
+.sound2{
+  display:none;
+}
+
 .playing{
   transform:scale(1.1);
   background: linear-gradient(145deg, #d1d0cc, #f8f7f3);
 
 }
+
 .letter{
   margin-bottom: 10px;
   font-size: 20px;
   font-weight: 700;
   width:80px;
 }
+
 .key11{
   width:130px;
 }
+
 .key29{
   width:110px;
+}
+.key22{
+  background: #ffffff;
 }
