--- a/styles/main.css
+++ b/styles/main.css
@@ -117,17 +117,12 @@ body{
   width:80px;
 }
 
-.key11{
-  width:130px;
-}
-
 .key22{
   background: #ffffff;
+  height:130px;
+  padding-top: 70px;
 }
 
-.sound2{
-  display:none;
-}
 
 /****** animations keys ******/
 
