--- a/styles/main.css
+++ b/styles/main.css
@@ -118,11 +118,15 @@ body{
 }
 
 .key22{
-  background: #ffffff;
+  background: var(--padsGradient2);
+  box-shadow:  9px 9px 13px var(--padsGradient1);
   height:130px;
   padding-top: 70px;
 }
-
+.key29 , .key30{
+  background: var(--padsGradient2);
+  box-shadow:  9px 9px 13px var(--padsGradient1);
+}
 
 /****** animations keys ******/
 
