--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,8 @@
   --pads2:#97e9e4;
   --padsGradient1:#82c9c4;
   --padsGradient2:#98ebe6;
+  --lyrics: #D6FFF6;
+  --title:#23395B;
 
 }
 
@@ -15,6 +17,8 @@
   --pads2:#04c543;
   --padsGradient1:#039c36;
   --padsGradient2:#05d448;
+  --lyrics:#fcab10;
+  --title:#7CE577;
 }
 
 /****************** 
@@ -25,7 +29,6 @@ body{
   width: 100%;
   background: var(--primaryColor);
   background-size:cover;
-  height:100vh;
   margin:0px;
   font-family: 'Inter', sans-serif;
 }
@@ -37,7 +40,7 @@ body{
   font-weight: 700px;
   font-size: 55px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--title);
   transition: 0.5s linear;
   letter-spacing: 8px;
   cursor: pointer;
@@ -49,20 +52,20 @@ body{
 }
 
 .words{
-  height:200px;
+  height:170px;
   margin-top: 50px;
   font-size: 100px;
   font-weight: 700;
   display: flex;
   justify-content: center;
   font-family: 'Poiret One', cursive;
-
+  color: var(--lyrics);
 }
 
 .container
 {
     width: 1200px;
-    height: 500px;
+    height: 400px;
     margin: 0 auto;
     cursor: pointer;
 }
@@ -118,13 +121,13 @@ body{
 }
 
 .key22{
-  background: var(--padsGradient2);
+  background: var(--lyrics);
   box-shadow:  9px 9px 13px var(--padsGradient1);
   height:130px;
   padding-top: 70px;
 }
 .key29 , .key30{
-  background: var(--padsGradient2);
+  background: var(--lyrics);
   box-shadow:  9px 9px 13px var(--padsGradient1);
 }
 
@@ -135,4 +138,16 @@ body{
   background: var(--padsGradient2);
   box-shadow:  9px 9px 13px var(--padsGradient1);
 
+}
+
+/****** footer ******/
+footer{
+  height: 40px;
+  width: 100%;
+  margin-bottom: 0px;
+  text-align: center;
+  padding-top: 15px;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: 'Poiret One', cursive;
 }
