--- a/styles/main.css
+++ b/styles/main.css
@@ -154,9 +154,9 @@ footer{
 
 /******* animation loading *******/
 
-/* .loader{
+.loader{
   position: fixed;
-  z-index: 99;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
@@ -191,13 +191,16 @@ footer{
 @keyframes loading{
   0%{
     opacity: 1;
+    z-index: 1;
   }
-
+  
   90% {
-      opacity: 1;
+    opacity: 1;
+    z-index: 1;
   }
-
+  
   100%{
-      opacity: 0;
+    opacity: 0;
+    z-index: -1;
   }
-} */
+}
